# new_one

./: README.md  pyproject.toml  update_app.py  update_client.py  update_dashboard.py  update_main.py
docs/: IMPLEMENTATION.md  PRODUCT.md  PYDANTIC_USAGE.md
docs/adr/: 001-document-extraction-approach.md  002-audio-transcription-strategy.md  003-structured-output-pydantic.md
src/agent/adapters/: auth_repository.py  mistral_coach.py  mongo_db.py
src/agent/api/: main.py
src/agent/app/: auth_service.py
src/agent/domain/models/: auth.py  coach.py  vault.py
src/agent/domain/ports/: coach.py
src/extractor/parsers/: audio.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/api/: auth.ts  client.ts
web/src/components/: ProtectedRoute.tsx  SharePatientCard.tsx
web/src/components/dashboard/: AICoachWidget.tsx  AppointmentWidget.tsx  MedicationWidget.tsx  ProgressWidget.tsx  QuickActionWidget.tsx  ReportsWidget.tsx  TaskWidget.tsx
web/src/contexts/: AuthContext.tsx
web/src/pages/: DashboardPage.tsx  DoctorDashboardPage.tsx  LoginPage.tsx  PatientCardPage.tsx  SignupPage.tsx  TimelinePage.tsx
web/src/types/: models.ts
