[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medical-parser"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mistralai>=1.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.9",
    "pymongo>=4.6.0",
    "pyjwt>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/extractor", "src/agent"]
